# portfolio

./: README.md
angular-erp-system/: .gitignore  (+12 more)
defi-lending-protocol/programs/defi-lending-protocol/: Cargo.toml
defi-lending-protocol/programs/defi-lending-protocol/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs  utils.rs
defi-lending-protocol/programs/defi-lending-protocol/src/instructions/: borrow.rs  claim_rewards.rs  deposit_collateral.rs  flash_loan.rs  init_user_obligation.rs  initialize_pool.rs  initialize_protocol.rs  liquidate.rs  repay.rs  stake_governance_tokens.rs  supply.rs  unstake_governance_tokens.rs  update_interest_rates.rs  update_oracle_price.rs  withdraw.rs  withdraw_collateral.rs
defi-lending-protocol/programs/defi-lending-protocol/src/state/: governance.rs  pool.rs  protocol.rs  rewards.rs  user_obligation.rs
defi-lending-protocol/programs/defi-lending-protocol/src/utils/: math.rs  oracle.rs  token.rs
defi-lending-protocol/programs/governance-token/: Cargo.toml
defi-lending-protocol/programs/governance-token/src/: lib.rs
financial-analysis-ml/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
financial-analysis-ml/.github/workflows/: ci.yml  dependency-updates.yml
financial-analysis-ml/alembic/: env.py
financial-analysis-ml/alembic/versions/: 001_initial_migration.py
financial-analysis-ml/config/: settings.py
financial-analysis-ml/docs/functional/: FUNCTIONAL_DOCUMENTATION.md
financial-analysis-ml/docs/tech/: TECHNICAL_DOCUMENTATION.md
financial-analysis-ml/scripts/: init-db.sql  init-test-db.sql
financial-analysis-ml/src/api/: main.py
financial-analysis-ml/src/api/dependencies/: auth.py
financial-analysis-ml/src/api/endpoints/: auth.py  users.py
financial-analysis-ml/src/api/middleware/: error_handler.py  logging_middleware.py
financial-analysis-ml/src/api/schemas/: portfolio_schemas.py  user_schemas.py
financial-analysis-ml/src/application/dto/: portfolio_dto.py  prediction_dto.py  user_dto.py
financial-analysis-ml/src/application/services/: auth_service.py
financial-analysis-ml/src/application/use_cases/: portfolio_use_cases.py  user_use_cases.py
financial-analysis-ml/src/domain/entities/: financial_instrument.py  portfolio.py  prediction.py  price_data.py  user.py
financial-analysis-ml/src/domain/exceptions/: base.py  portfolio_exceptions.py  user_exceptions.py
financial-analysis-ml/src/domain/repositories/: financial_instrument_repository.py  portfolio_repository.py  prediction_repository.py  price_data_repository.py  user_repository.py
financial-analysis-ml/src/domain/value_objects/: email.py  money.py  password.py
financial-analysis-ml/src/infrastructure/database/: connection.py  models.py
financial-analysis-ml/src/infrastructure/database/repositories/: __init__.py  user_repository_impl.py
financial-analysis-ml/src/infrastructure/messaging/: celery_app.py
financial-analysis-ml/src/infrastructure/messaging/tasks/: ml_tasks.py
financial-analysis-ml/src/infrastructure/ml/: base_model.py  lstm_model.py
financial-analysis-ml/tests/: conftest.py
financial-analysis-ml/tests/integration/: test_api_endpoints.py
financial-analysis-ml/tests/unit/: test_domain_entities.py  test_use_cases.py
nft-marketplace/: Anchor.toml  Cargo.toml  PROJECT_SUMMARY.md  README.md  docker-compose.yml  package.json
nft-marketplace/app/: Dockerfile  next.config.js  package.json  tailwind.config.js
nft-marketplace/app/src/app/: globals.css  layout.tsx  page.tsx
nft-marketplace/app/src/components/activity/: RecentActivity.tsx
nft-marketplace/app/src/contexts/: MarketplaceContext.tsx  SocketContext.tsx  ThemeContext.tsx  WalletContext.tsx
nft-marketplace/app/src/hooks/: useMarketplace.ts  useWallet.ts
nft-marketplace/docs/: SECURITY.md
nft-marketplace/docs/functional/: DOCUMENTACION_FUNCIONAL.md  FUNCTIONAL_DOCUMENTATION.md
nft-marketplace/docs/tech/: DOCUMENTACION_TECNICA.md  TECHNICAL_DOCUMENTATION.md
nft-marketplace/programs/auction-system/: Cargo.toml
nft-marketplace/programs/auction-system/src/: lib.rs
nft-marketplace/programs/marketplace/: Cargo.toml
nft-marketplace/programs/marketplace/src/: errors.rs  events.rs  lib.rs  state.rs  utils.rs
nft-marketplace/programs/nft-minting/: Cargo.toml
nft-marketplace/programs/nft-minting/src/: errors.rs  lib.rs  state.rs
nft-marketplace/scripts/: deploy.sh
nft-marketplace/tests/: marketplace.test.ts
rust-blockchain/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
rust-blockchain/benches/: blockchain_bench.rs
rust-blockchain/docs/: API_REFERENCE.md  ARCHITECTURE.md
rust-blockchain/scripts/: docker-setup.sh
rust-blockchain/src/: api.rs  bip39_wallet.rs  blockchain.rs  crypto.rs  error.rs  lib.rs  mempool.rs  merkle_tree.rs  mining.rs  network.rs  persistence.rs  smart_contracts.rs  transaction.rs  utxo.rs  wallet.rs
rust-blockchain/tests/: integration_tests.rs
rust-web-server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust-web-server/benches/: server_benchmark.rs
rust-web-server/k8s/: deployment.yaml  hpa.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  servicemonitor.yaml
rust-web-server/load-tests/: k6-load-test.js  run-tests.sh  wrk-script.lua
rust-web-server/migrations/: 001_initial.sql
rust-web-server/src/: config.rs  error.rs  main.rs
rust-web-server/src/handlers/: auth.rs  health.rs  metrics.rs  mod.rs  sse.rs  upload.rs  websocket.rs
rust-web-server/src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs
rust-web-server/src/models/: auth.rs  user.rs
rust-web-server/src/routes/: admin.rs  mod.rs  protected.rs  public.rs  websocket.rs
rust-web-server/src/services/: cache.rs  database.rs  metrics.rs  mod.rs
rust-web-server/src/utils/: logging.rs
rust-web-server/tests/: integration_tests.rs
(+700 files in other folders)
