[package]
name = "defi-lending-protocol"
version = "0.1.0"
description = "DeFi Lending Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defi_lending_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
pyth-sdk-solana = "0.10.1"
switchboard-v2 = "0.4.0"
uint = "0.9.5"

[dev-dependencies]
solana-program-test = "1.16.0"