[package]
name = "governance-token"
version = "0.1.0"
description = "Governance Token Program for DeFi Lending Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.16.0"