[package]
name = "nft-minting"
version = "0.1.0"
description = "Advanced NFT minting with custom metadata and collection management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_minting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
mpl-token-metadata = { workspace = true }
mpl-candy-machine = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-2022 = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
arrayref = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }